correction de bugs

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,4 +76,17 @@
         app:layout_constraintBottom_toTopOf="@+id/id"
         app:layout_constraintStart_toStartOf="@+id/id" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="327dp"
+        android:layout_height="122dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginBottom="83dp"
+        android:contentDescription="logo isen"
+        app:layout_constraintBottom_toTopOf="@+id/textid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
+        app:srcCompat="@drawable/isen" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
